tests/baselines/reference/override5.errors.txt
tests/cases/conformance/override/override5.ts(10,13): error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
tests/cases/conformance/override/override5.ts(12,14): error TS1040: 'override' modifier cannot be used in an ambient context.
tests/cases/conformance/override/override5.ts(14,14): error TS1243: 'static' modifier cannot be used with 'override' modifier.
tests/cases/conformance/override/override5.ts(16,14): error TS1030: 'override' modifier already seen.
tests/cases/conformance/override/override5.ts(19,14): error TS1029: 'public' modifier must precede 'override' modifier.
tests/cases/conformance/override/override5.ts(21,5): error TS1089: 'override' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/override/override5.ts (6 errors) ====
    class B {
        p1: number = 1;
        p2: number = 2;
        oop: number;
        pp: number;
        op: number;
    }
    
    class D extends B{
        declare p1: number
                ~~
!!! error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'B'.
    
        override declare p2: number
                 ~~~~~~~
!!! error TS1040: 'override' modifier cannot be used in an ambient context.
    
        override static sp: number;
                 ~~~~~~
!!! error TS1243: 'static' modifier cannot be used with 'override' modifier.
    
        override override oop: number;
                 ~~~~~~~~
!!! error TS1030: 'override' modifier already seen.
    
        public override pp: number;
        override public op: number;
                 ~~~~~~
!!! error TS1029: 'public' modifier must precede 'override' modifier.
    
        override constructor () {
        ~~~~~~~~
!!! error TS1089: 'override' modifier cannot appear on a constructor declaration.
            super();
        }
    }
    